Fix svg icons flickering (miniflux/v2#3653)
The only way I found is to inline `icons.svg` into the HTML.

`icons.svg` is a copy of `sprite.svg` from `ui/static/bin/`.

--- a/internal/ui/static/css/common.css
+++ b/internal/ui/static/css/common.css
@@ -947,6 +947,11 @@ article.category-has-unread {
 }
 
 /* Icons */
+#svg-icons {
+    display: none;
+    visibility: hidden;
+}
+
 .icon,
 .icon-label {
     vertical-align: text-bottom;
